--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
 <br/>
 <h3>Nombre: Cristian Ortega</h3>
 <h3>Matricula: 1-19-3502</h3>
+<br/>
+<fieldset> <iframe width="707" height="384" src="https://www.youtube.com/embed/BSVpBFlg1jg"  frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></fieldset>
 </center>
-  <br/>
-  <br/>
- <fieldset> <iframe width="707" height="384" src="https://www.youtube.com/embed/BSVpBFlg1jg" title="Espectacular vídeo de viaje alrededor del mundo." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></fieldset>
 <div id="divBotones">
 <a href="p1.html">Siguiente</a>
 </div>
